...
        },
      ]}
    >
      <Pressable
        style={buttonContainerStyle}
        onPress={onPress}
        testID={testID || 'header-action-button'}
      >
        {label && <Text style={styles.label}>{label}</Text>}
        <Icon
          component={IconComponent}
          name={icon}
          size={iconSize}
...
