...
      <View style={styles.container}>
        <View style={styles.appLogoContainer}>
          <AppLogo />
        </View>
        <View style={styles.formControlContainer}>
          <EditableFormControl
            label="Your Email"
            darkMode
            formValue={email}
            onChangeText={setEmail}
            placeholder={PLACEHOLDERS.signIn.emailInput}
          />
          <EditableFormControl
...
            placeholder={PLACEHOLDERS.signIn.passwordInput}
          />
          <Pressable
            style={styles.resetPasswordLink}
            onPress={() => navigation.navigate('PasswordReset')}
          >
            <Text style={styles.resetPasswordText}>パスワードをリセットする</Text>
          </Pressable>
        </View>
        <View style={styles.signInButtonWrapper}>
          <SubmitButton
            label="Sign In"
            onPress={submitSignIn}
...
