export const PLACEHOLDERS = {
  signIn: {
    emailInput: 'メールアドレスを入力してください',
    passwordInput: 'パスワードを入力してください',
  },
  passwordReset: {
    emailInput: 'メールアドレスを入力してください',
    newPasswordInput: '新しいパスワードを入力してください',
    codeInput: '6桁の認証コードを入力してください',
  },
  register: {
    usernameInput: 'ユーザー名を入力してください',
    emailInput: 'メールアドレスを入力してください',
    passwordInput: 'パスワードを入力してください',
    codeInput: '6桁の認証コードを入力してください',
  },
  profileEdit: {
    usernameInput: 'ユーザー名を入力してください',
...
